--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <!-- Google Fonts -->
 
-  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&family=Bellefair&family=Outfit&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&family=Bellefair&family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="Css/styles.css">
   
   <title>Frontend Mentor | QR code component</title>
